examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E300: generic ADT constructor field type mismatch under instantiated annotation.
type Result<T, E> = Ok(T) | Err(E)

let bad: Result<Int, String> = Ok("oops")
